styles/base.scss
/* ... */
.ui.label.bordered {
  height: 22px;
  margin: -2px 0 -1px;
  border: solid 1px #dee2e6;
  border-radius: 2px;
  padding: 2px 6px 2px 7px;
  background-color: #f8f9fb;
  font-size: 12px;
  font-weight: 400;
  line-height: 1.3333333;

  &.right {
    float: right;
  }
}

.fields .field .selection.dropdown:not(.label) {
  max-width: 100%;
  min-width: 100%;
}

.accordion {
  > .title {
    padding: 0 0 1em;
  }
}

div.page-wrapper {
  background: #f8f9fb;
  overflow-y: auto;
  overflow-x: hidden;

  > .fluid.container {
    flex-grow: 0;
    flex-shrink: 0;
  }

  > .flex.stretched,
  .marketplace-container > .flex.stretched {
    flex-grow: 1;
    flex-shrink: 1;

    .table-responsive {
      flex-grow: 1;
      flex-shrink: 1;
    }
  }

  .marketplace-container {
    display: flex;
    flex-flow: column;
    height: 100%;
    max-height: 100%;

    > .secondary.menu:first-child {
      margin-bottom: 1em;
    }

    > .container {
      flex-grow: 1;
      flex-shrink: 1;
      display: flex;
      flex-flow: column;
      height: auto;
      min-height: 0;

      .selection {
        width: auto;
      }

      .segment {
        height: 100%;
        min-height: 0;
      }
    }

    .bootstrapiso > div.flex-column {
      max-height: 100%;
      min-height: 0;
    }
  }

  div.padded.segment {
    border: 1px solid #dee2e6;
    background: #fff;

    .dimmer {
      top: -1px !important;
      left: -1px !important;
      width: calc(100% + 2px);
      height: calc(100% + 2px);
    }
  }

  .shopping-cart-items,
  div.dropzoneLot,
  .ui.fluid.container .ui.pointing.secondary.menu {
    background: #fff;
  }

  div.ui.inverted.dimmer,
  .ui.loading.segment:before {
    background: #f8f9fb;
  }
}

.sui-error-message {
  display: block;
  margin: 0.28571429rem 0;
  color: rgb(159, 58, 56);
  font-size: 0.92857143em;
}

.ui.error.message .content p {
  line-height: 1.5;
}

#page.scrolling {
  height: 100%;

  .scrollbar-container {
    position: relative;
    transform: translateX(0);
    overflow: hidden;
    width: calc(100% + (2.2857143em * 2));
    height: 100%;
    margin: 0 -2.2857143em;
    padding: 0 2.2857143em 3em;

    .ps__rail-y {
      position: absolute;
      left: auto !important;
      right: 0 !important;
      width: 1em;
      height: calc(100% - 0.2em) !important;
      margin: 0.1em 0;

      .ps__thumb-y {
        position: absolute;
        width: 0.8em;
        margin: 0 0.1em;
        background: rgba(0, 0, 0, 0.15);
      }
    }
  }
}

#page.auto-scrolling {
  display: flex;
  flex-flow: column;
  height: 100%;

  > .scroll-area {
    flex-grow: 1;
    flex-shrink: 1;
    overflow-x: hidden;
    overflow-y: auto;
  }

  > *:last-child {
    padding-bottom: 32px;
  }
}

#page > .data-table-wr.orders {
  position: relative;
  left: -2.2857143em;
  right: -2.2857143em;
  width: calc(100% + 2 * 2.2857143em);
  height: 1px; // should be enlarged due to flex
  flex-shrink: 100;
  flex-grow: 100;
  padding: 0 2.2857143em;

  .scrollbar-container {
    position: relative;
    overflow: hidden;
    width: calc(100% + (2 * 2.2857143em));
    height: 100%;
    margin: 0 -2.2857143em;
    padding: 0 2.2857143em;

    .ps__rail-x {
      display: none;
    }

    .ps__rail-y {
      position: absolute;
      top: 0 !important;
      left: auto !important;
      right: 0 !important;
      width: 1em;
      height: calc(100% - 0.2em) !important;
      margin: 0.1em 0;

      .ps__thumb-y {
        position: absolute;
        width: 0.8em;
        margin: 0 0.1em;
        background: rgba(0, 0, 0, 0.15);
      }
    }
  }

  thead tr {
    th {
      position: relative;

      .fix-header {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        z-index: 3;
        box-sizing: border-box;
        height: 100%;
        padding: 0 0.7em 0.92857143em;
        background: rgba(255, 255, 255, 0.9);
        color: #33373e;
        line-height: 17px;
      }

      &:first-child .fix-header {
        padding-left: 0;
        box-shadow: -5px 0 0 0 rgba(255, 255, 255, 0.9);
      }

      &:last-child .fix-header {
        padding-right: 0;
        box-shadow: 5px 0 0 0 rgba(255, 255, 255, 0.9);
      }
    }
  }
}

h1.ui.header {
  text-transform: uppercase;

  &:first-child {
    margin-top: 0;
  }

  &.medium {
    font-size: 1.28571429em;
    font-weight: 500;
    line-height: 1.22223;
  }
}

.ui.header {
  font-family: 'HelveticaNeueLTPro';
  font-weight: 500;

  &.grey {
    color: $grey;
  }

  &.small {
    font-size: 1.142857em;
  }
}

h3.ui.header {
  font-size: 1.142857em;

  i.info.circle {
    // hack to center for popup arrow
    margin: 0 0 0 -0.38em;
    padding: 0 0 0 0.88em;
    vertical-align: top;
    font-size: 0.875em;
  }
}

.ui.form .field > label {
  font-size: 1em;
  font-weight: 400;
}

.ui.form .field > .selection.dropdown {
  max-width: 100%;
  min-width: 100%;
}

.ui.form .field > .field + .field {
  padding-top: 1em;
}
/* ... */

